# ai-assistant

./: CLAUDE.md  README.md  config.yaml  pyproject.toml  test_agents.py
docs/: add-video-tool.md  video-timing-system.md  weighting-system.md
features/: features-01.md  features-02.md  features-03.md  implementation-summary.md  sage.md
memory-bank/: # Where I'm at.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
personality/: expressions-video.json  expressions.json
sage/: __init__.py  cli.py  sage.prompt
sage/agents/: __init__.py  base.py  crew_manager.py  tools.py
sage/config/: __init__.py  loader.py  models.py
sage/context/: __init__.py  memory_bank.py  store.py
sage/core/: __init__.py  bedrock_client.py  file_monitor.py  sage_main.py
sage/ui/: __init__.py  personality.py  web_server.py
sage/ui/static/: app.js  style.css
sage/ui/templates/: index.html
